# routers/router.go
@@ -5,11 +5,8 @@ import (
 	"github.com/gofiber/fiber/v2/middleware/logger"
 	"github.com/gofiber/fiber/v2/middleware/recover"
 	"github.com/gofiber/fiber/v2/middleware/requestid"
-	jwtware "github.com/gofiber/jwt/v3"
 	controller "github.com/jinpikaFE/go_fiber/controllers"
-	"github.com/jinpikaFE/go_fiber/middleware/jwt"
 	"github.com/jinpikaFE/go_fiber/pkg/logging"
-	"github.com/jinpikaFE/go_fiber/pkg/untils"
 
 	"github.com/gofiber/fiber/v2/middleware/monitor"
 
@@ -70,32 +67,14 @@ func InitRouter() *fiber.App {
 	apiv1 := app.Group("/v1")
 
 	{
-		apiv1.Post("/login", controller.Login)
-		apiv1.Post("/captcha", controller.GetCaptcha)
 		apiv1.Get("/region", controller.GetRegion)
 	}
-
-	// JWT Middleware
-	app.Use(jwtware.New(jwtware.Config{
-		SigningKey:   []byte("secret"),
-		ErrorHandler: untils.JwtError,
-	}))
-
-	apiv1.Use(jwt.Jwt)
 
 	{
 		apiv1.Get("/test", controller.GetTests)
 		apiv1.Post("/test", controller.AddTest)
 		apiv1.Put("/test/:id", controller.EditTest)
 		apiv1.Delete("/test/:id", controller.DelTest)
-	}
-
-	{
-		apiv1.Get("/users", controller.GetUsers)
-		apiv1.Get("/user", controller.GetUser)
-		apiv1.Post("/user", controller.AddUser)
-		apiv1.Put("/user/:id", controller.EditUser)
-		apiv1.Delete("/user/:id", controller.DelUser)
 	}
 
 	{
